# digikala-tools

./: README.md  digikala_mcp_server.py  pyproject.toml  usage.ipynb
digikala_tools/: data_process.py  digikala_api.py  langchain_tools.py  pydantic_models.py  tool_functions.py
